[package]
name = "gluster-charm"
version = "0.1.0"
authors = ["Chris Holcombe<chris.holcombe@canonical.com>"]

[dependencies]
chrono = { version = "0.2", features = ["rustc-serialize"] }
debian = "*"
# gluster = "*"
gluster = {path = "../Gluster"}# "*"
init-daemon = "*"
itertools = "*"
juju = {path = "../Juju"}
libc = "*"
libudev = "*"
log = "*"
openssl = "*"
rand = "*"
regex = "*"
rustc-serialize = "*"
uuid = { version = "*", features = ["v4"] }

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes -g or `--cfg ndebug`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs
debug-assertions = true  # Controls whether debug assertions are enabled

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false


[[bin]]
name = "main"
path = "src/main.rs"
