[package]
name = "gluster-charm"
description = "Gluster juju charm"
license = "Apache-2.0"
version = "1.0.1"
authors = ["Chris Holcombe<chris.holcombe@canonical.com>"]

[dependencies]
chrono = { version = "0.3", features = ["rustc-serialize"] }
debian = "*"
fstab = "~0.3"
gluster = "~0.7"
init-daemon = "*"
ipnetwork = "~0.12"
itertools = "*"
juju = "~1.0"
libc = "*"
libudev = "*"
nix = "~0.8"
pnet = "~0.16"
rand = "~0.3"
regex = "~0.1"
resolve = "~0.1"
rustc-serialize = "*"
serde = "^0.9"
serde_yaml = "^0.6"
shellscript = "~0.3"
uuid = { version = "^0.4", features = ["v4"] }

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes -g or `--cfg ndebug`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs
debug-assertions = true  # Controls whether debug assertions are enabled

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false


[[bin]]
name = "main"
path = "src/main.rs"
